--- a/app/globals.css
+++ b/app/globals.css
@@ -64,14 +64,11 @@ html, body {
   }
 }
 
-.mt-auto {
-  margin-top: auto;
-}
-/* @layer base {
+@layer base {
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
   }
-} */
+}
